# gbif-thes2rdf

./: README.md  pyproject.toml  urls.txt
template/: thes2skos.ttl
